--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <title>My App</title>
+  <title><%= htmlWebpackPlugin.options.title %></title>
   <meta charset="UTF-8">
-  <meta name='viewport' content='initial-scale=1,maximum-scale=5' />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" type="image/png" sizes="16x16" href="icon_16x16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="icon_32x32.png">
